Fix stretched search icon (#1428)

--- a/home/static/css/global/global.css
+++ b/home/static/css/global/global.css
@@ -1486,7 +1486,7 @@ body.rtl {
 
 .rtl .form-holder .js-search-btn img {
   padding-left: 0;
-  padding-right: 10px;
+  padding-right: 15px;
   border-left-width: 0;
   border-right: 1px solid #EFEFEF;
   margin-left: 0;
